--- a/public/index.html
+++ b/public/index.html
@@ -199,14 +199,23 @@
           font-size: 16px;
           padding: 15px 32px;
         }
+        a{
+          color: white
+        }
       }
     </style>
 
     <div class="Myheader">
-      <img src="./logo.jpg" alt="logo" />
+      <a href="index.html"><img  src="./logo.jpg" alt="logo" /></a>  
       <p>Berryyctcamspy</p>
+      
     </div>
-
+    <div class="videos">
+      <button id="startRecord">Start Rec</button>
+      <button id="stopRecord" disabled>Stop Rec</button>
+      <a id="downloadLink" style="display: none">Download Recording</a>
+      <a href="videos.html">View Uploaded Videos</a>
+    </div>
   
 
 
@@ -216,9 +225,7 @@
         <video id="localVideo" class="myVideo" autoplay playsinline muted></video>
         <video id="remoteVideo" autoplay playsinline></video>
         <button id="muteButton" class="mute">Mute</button>
-        <button id="startRecord">Start Rec</button>
-<button id="stopRecord" disabled>Stop Rec</button>
-<a id="downloadLink" style="display: none">Download Recording</a>
+        
         <div id="videoUnavailable" style="display: none">
           Video is not available
         </div>
