--- a/public/videos.html
+++ b/public/videos.html
@@ -16,24 +16,55 @@
     <ul class="vidlist" id="videoList"></ul>
 
     <script>
+        // async function fetchVideos() {
+
+        //     const response = await fetch("/videos");
+        //     const videos = await response.json();
+        //     const videoList = document.getElementById("videoList");
+        //     videoList.innerHTML = "";
+
+        //     videos.forEach(video => {
+        //         const listItem = document.createElement("li");
+        //         const videoElement = document.createElement("video");
+        //         videoElement.src = `/uploads/${video}`;
+        //         videoElement.controls = true; // Enable playback controls
+        //         videoElement.width = 300;
+
+        //         listItem.appendChild(videoElement);
+        //         videoList.appendChild(listItem);
+        //     });
+        // }
+
         async function fetchVideos() {
+        try {
             const response = await fetch("/videos");
+            if (!response.ok) throw new Error("Failed to load videos");
+            
             const videos = await response.json();
             const videoList = document.getElementById("videoList");
             videoList.innerHTML = "";
+
+            if (videos.length === 0) {
+                videoList.innerHTML = "<p>No videos found.</p>";
+                return;
+            }
 
             videos.forEach(video => {
                 const listItem = document.createElement("li");
                 const videoElement = document.createElement("video");
                 videoElement.src = `/uploads/${video}`;
-                videoElement.controls = true; // Enable playback controls
+                videoElement.controls = true;
                 videoElement.width = 300;
 
                 listItem.appendChild(videoElement);
                 videoList.appendChild(listItem);
             });
+        } catch (error) {
+            console.error("Error fetching videos:", error);
+            document.getElementById("videoList").innerHTML = "<p>Failed to load videos.</p>";
         }
-
+    }
+        
         fetchVideos();
     </script>
 </body>
