--- a/public/index.html
+++ b/public/index.html
@@ -253,6 +253,12 @@
             urls: "turn:turn.anyfirewall.com:443?transport=tcp",
             username: "webrtc",
             credential: "webrtc"
+          },
+
+          {
+            urls: "relay1.expressturn.com:3478",
+            username: "ef8FR11XS6X4PGEGKJ",
+            credential: "xfDip4yPjwcObHq6"
           }
         ],
       };
