--- a/public/index.html
+++ b/public/index.html
@@ -255,11 +255,11 @@
             credential: "webrtc"
           },
 
-          {
-            urls: "relay1.expressturn.com:3478",
-            username: "ef8FR11XS6X4PGEGKJ",
-            credential: "xfDip4yPjwcObHq6"
-          }
+          // {
+          //   urls: "relay1.expressturn.com:3478",
+          //   username: "ef8FR11XS6X4PGEGKJ",
+          //   credential: "xfDip4yPjwcObHq6"
+          // }
         ],
       };
 
